Fix(table): chackbox align

--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -38,7 +38,6 @@
         padding: 0;
         border-bottom: 1px solid $gray-400;
         text-align: center;
-        vertical-align: unset;
       }
     }
 
@@ -63,6 +62,13 @@
         .cell {
           padding: 0 8px;
         }
+      }
+    }
+
+    &-column {
+      &--selection {
+        @include flex-box(items-center justify-center);
+        height: 43px;
       }
     }
   }
